--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ actix = "0.13.1"
 actix-web = "4"
 actix-web-actors = "4.2.0"
 invidious = "0.7.2"
+once_cell = "1.18.0"
+rand = "0.8.5"
+serde = "1.0.189"
+serde_json = "1.0.107"
