--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,3 +1,4 @@
+
 name: Rust
 
 on:
@@ -15,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2.7.0
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose
