--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,6 @@ jobs:
       uses: Swatinem/rust-cache@v2.7.0
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: cargo build  # --verbose
     #- name: Run tests
     #  run: cargo test --verbose
