--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ actix-web-actors = "4.2.0"
 invidious = "0.7.2"
 once_cell = "1.18.0"
 rand = "0.8.5"
+reqwest = { version = "0.11.22", features = ["blocking"] }
 serde = "1.0.189"
 serde_json = "1.0.107"
