--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,4 @@ once_cell = "1.18.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.22", features = ["blocking", "json"] }
 serde = "1.0.189"
-serde_json = "1.0.107"
+serde_json = {version = "1.0.107", features = ["raw_value"]}
