--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix = "0.13.1"
+actix-files = "0.6.2"
 actix-web = "4"
 actix-web-actors = "4.2.0"
 invidious = "0.7.2"
