--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "guess_the_song_backend"
-version = "0.1.0"
+version = "0.3.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/VirusBLITZ/guess_the_song_backend"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
