--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ repository = "https://github.com/VirusBLITZ/guess_the_song_backend"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-invidious = {version = "0.7.2", no-default-features=true, features = ["reqwest_sync"]}
+invidious = { version = "0.7.2", features = [
+    "reqwest_sync",
+] }
 actix = "0.13.1"
 actix-files = "0.6.2"
 actix-web = "4"
